--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -158,7 +158,12 @@
       "pss10": "PSS-10 压力量表",
       "cssrs": "C-SSRS 安全风险筛查",
       "scl90": "SCL-90 症状自评",
-      "who5": "WHO-5 主观幸福感指数"
+      "who5": "WHO-5 幸福感指数",
+      "isi7": "ISI-7 失眠严重度指数",
+      "swls5": "SWLS-5 生活满意度",
+      "ucla3": "UCLA 孤独感（3题）",
+      "cdrisc10": "CD-RISC-10 心理韧性",
+      "phq15": "PHQ-15 躯体症状"
     },
     "start": "开始测评",
     "items": "题",
@@ -183,6 +188,11 @@
       "moderate": "中度",
       "moderately severe": "中重度",
       "severe": "重度",
+      "subthreshold": "阈下",
+      "reduced_wellbeing": "幸福感下降",
+      "stable_wellbeing": "幸福感稳定",
+      "elevated_loneliness": "孤独感偏高",
+      "low_to_moderate_loneliness": "孤独感低至中等",
       "unknown": "未分级"
     },
     "dim_somatization": "躯体化不适",
@@ -211,8 +221,27 @@
       "pss10": "PSS-10 用于评估个体对生活压力的主观感知，是压力研究常用量表。",
       "cssrs": "C-SSRS 采用结构化风险条目，可用于识别近期自伤/自杀意念与行为风险。",
       "scl90": "SCL-90 覆盖多维心理症状群，可用于总体心理困扰水平的广泛筛查。",
-      "who5": "WHO-5 用于评估近两周主观幸福感水平，可辅助观察情绪恢复趋势。",
-      "generic": "该量表基于标准化心理测量框架，可用于初步状态评估。"
+      "generic": "该量表基于标准化心理测量框架，可用于初步状态评估。",
+      "who5": "WHO-5 用于评估近两周积极幸福感状态，常用于快速识别幸福感下降风险。",
+      "isi7": "ISI-7 用于评估失眠严重度及其对白天功能的影响，适合睡眠困扰初筛。",
+      "swls5": "SWLS-5 评估个体对整体生活的认知性满意度，不聚焦单一事件。",
+      "ucla3": "UCLA-3 通过 3 个条目快速识别孤独感与社交疏离信号。",
+      "cdrisc10": "CD-RISC-10 评估在压力和挫折中的恢复力与心理韧性资源。",
+      "phq15": "PHQ-15 用于评估常见躯体症状负担，适合压力相关身心反应初筛。"
+    },
+    "disclaimer": {
+      "phq9": "结果用于初筛与状态追踪，不构成临床诊断；若症状持续或恶化，请寻求专业评估。",
+      "gad7": "结果用于焦虑状态初筛，不等同于诊断结论；如影响生活功能，请联系专业人士。",
+      "pss10": "结果反映主观压力感知，不直接代表医学风险；建议结合睡眠、作息与支持系统综合判断。",
+      "cssrs": "本量表用于安全分流，任一阳性都应及时联系专业支持或紧急服务。",
+      "scl90": "结果用于广泛症状筛查，不可替代精神科诊断；请结合专业访谈进一步确认。",
+      "who5": "结果反映近期幸福感水平，不用于诊断；若长期低分，建议补充焦虑/抑郁相关评估。",
+      "isi7": "结果用于睡眠困扰筛查，不替代睡眠医学诊断；长期失眠建议就医评估。",
+      "swls5": "结果反映主观生活满意度，不等同心理健康全面结论，需结合情绪与功能状态理解。",
+      "ucla3": "结果提示孤独感风险信号，不代表人格缺陷或诊断结论，可结合社交支持策略改善。",
+      "cdrisc10": "结果反映当前韧性资源水平，并非固定能力标签；韧性可通过训练与支持提升。",
+      "phq15": "结果用于躯体症状负担筛查，不用于排除器质性疾病；若症状明显请及时就医。",
+      "generic": "量表结果仅用于心理教育与自我观察，不构成医学诊断或处方建议。"
     },
     "purpose": {
       "phq9": "帮助你快速判断最近的低落情绪是否在加重。",
